# phantom-fhe

./: .gitignore  CMakeLists.txt
bootstrapping/: Bootstrapper.cuh  ckks_evaluator.cu  ckks_evaluator.cuh
bootstrapping/common/: Polynomial.cuh
examples/: CMakeLists.txt  bootstrapping.cu  cnn.cu  lib_ex.cu
include/: ciphertext.h  cnn_phantom.h  evaluate.cuh  phantom.h  phantom_api.cuh  rt_def.h  rt_phantom.cuh
include/boot/: ckks_evaluator.cuh
result/: resnet110_cifar10_image0.txt  resnet110_cifar10_label_0_0  resnet20_cifar10_image0.txt
src/: ckks.cu  cnn_phantom.cu  context.cu  evaluate.cu  phantom_lib.cu  secretkey.cu
src/boot/: Bootstrapper.cu  ModularReducer.cu  ckks_evaluator.cu
src/boot/common/: Polynomial.cu
tests/: CMakeLists.txt  add.cu  add_inplace.cu  add_many.cu  add_plain.cu  add_plain_inplace.cu  apply_galois.cu  apply_galois_inplace.cu  bootstrapping_test.cu  change.cu  ckks_add_op.cu  ckks_basic_op.cu  ckks_bootstrapping.cu  ckks_conjugate_op.cu  ckks_diff_chaindex.cu  ckks_encryption_op.cu  ckks_evaluator_test.cu  ckks_galois_op.cu  ckks_matrix_multi.cu  ckks_multi_op.cu  ckks_muti_parms.cu  ckks_negation_op.cu  ckks_relin_op.cu  ckks_rescale_op.cu  ckks_rotation_op.cu  ckks_sub_op.cu  conjugate.cu  conjugate_inplace.cu  decode.cu  decryption.cu  encode.cu  encryption.cu  gpu_test_runner.py  mod_switch_plain_to_inplace.cu  mod_switch_to_inplace.cu  mod_switch_to_next_inplace.cu  multi.cu  multi_inplace.cu  multi_plain.cu  multi_plain_inplace.cu  (+11 more)
